--- a/package.json
+++ b/package.json
@@ -8,8 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
+    "@reduxjs/toolkit": "^1.6.0",
+    "firebase": "^8.6.7",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-query": "^3.17.0",
+    "react-query-devtools": "^2.6.3",
+    "react-redux": "^7.2.4",
+    "universal-cookie": "^4.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "@types/react-redux": "^7.1.16",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.2",
+    "tailwindcss": "^2.1.4",
+    "typescript": "^4.3.2"
   }
 }
